# theta_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_cimgui.sh  build_glfw.bat  build_glfw.sh  copy_dll.bat  copy_res.bat  copy_res.sh  run.bat  run.sh
lambda/: CMakeLists.txt
lambda/src/: main.c  main.cpp
res/: TODO  basic_shader.shader  basic_shader_colored.shader  basic_shader_textured.shader  lighting_shader_textured.shader  pbr.shader  skybox.shader  test.txt
sandbox/: CMakeLists.txt
sandbox/src/: CMakeLists.txt  exp_main.c  main.c  main.cpp
theta/: CMakeLists.txt  Things_To_Do
theta/include/glad/: gl.h  glad.h
theta/src/: CMakeLists.txt  core.h  theta.h
theta/src/application/: application.c  application.cpp  application.h
theta/src/input/: input.c  input.cpp  input.h
theta/src/library_impls/: impls.c
theta/src/logger/: logger.c  logger.cpp
theta/src/math/: matrix.c  matrix.cpp  matrix.h  tmath.h  vector.c  vector.h
theta/src/mathdepr/: matrix.h_depr  vector.c_depr
theta/src/object/: camera.c  camera.cpp  camera.h  light.h  object.c  object.cpp  object.h  scene.c  scene.cpp  scene.h  scene_manager.c  scene_manager.h  transform.h
theta/src/renderer/: material.c  material.cpp  material.h  mesh.c  mesh.cpp  mesh.h  renderable.c  renderable.h  renderer.c  renderer.cpp  renderer.h  shader.c  shader.h  shader_library.c  shader_library.h  skybox.c  skybox.h  texture.c  texture.cpp  texture.h  uniform_buffer.c  uniform_buffer.h
theta/src/renderer/context/: context.c  context.cpp  context.h
theta/src/renderer/context/opengl/: oglcontext.c  oglcontext.cpp  oglcontext.h  oglmesh.c  oglmesh.h  oglshader.c  oglshader.cpp  oglshader.h  oglskybox.c  oglskybox.h  ogltexture.c  ogltexture.cpp  ogltexture.h  ogluniform_buffer.c  ogluniform_buffer.h
theta/src/resource/: resource.c  resource.h
theta/src/timer/: timer.c  timer.h
theta/src/timer/platform/posix/: timer_posix.c
theta/src/timer/platform/win32/: timer_win32.c
theta/src/utils/: list.c  list.cpp  list.h
theta/src/window/: window.c  window.cpp  window.h
theta/src/window/platform/shared/: shared_window.c  shared_window.cpp  shared_window.h  shared_window_keys.h
thrown_away_code/: list.c  list.h
